--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
    
     "prefix": "&",
-    "dono":"Ismael",
-    "token": ""
+    "dono":"Ismael Albert",
+    "token": "ODQxMzY0MDU1NDc4MjM5MjYz.YJlrVg.raWXOVYjeOF3XGpwhPbIhm_6CWE"
 
 }
  
