--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
    
     "prefix": "&",
     "dono":"Ismael Albert",
-    "token": "ODQxMzY0MDU1NDc4MjM5MjYz.YJlrVg.raWXOVYjeOF3XGpwhPbIhm_6CWE"
+    "token": ""
 
 }
  
